# CirclepodP-CLI

./: Cargo.toml  README.md  config.yml
Example/: indicatif.rs
src/: main.rs
src/create_spl/: mod.rs  utils.rs
src/create_spl_account/: mod.rs
src/create_spl_token/: mod.rs
